add time blocks

--- a/index.html
+++ b/index.html
@@ -29,7 +29,51 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="col-md-1 hour">9:00AM</div>
+        <input id="9Row" class="user-inp col-md-10 block-inp">
+        <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-1 hour">10:00AM</div>
+        <input id="10Row" class="user-inp col-md-10 block-inp">
+        <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-1 hour">11:00AM</div>
+        <input id="11Row" class="user-inp col-md-10 block-inp">
+        <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-1 hour">12:00PM</div>
+        <input id="12Row" class="user-inp col-md-10 block-inp">
+        <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-1 hour">1:00PM</div>
+        <input id="1Row" class="user-inp col-md-10 block-inp">
+        <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-1 hour">2:00PM</div>
+        <input id="2Row" class="user-inp col-md-10 block-inp">
+        <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-1 hour">3:00PM</div>
+        <input id="3Row" class="user-inp col-md-10 block-inp">
+        <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-1 hour">4:00PM</div>
+        <input id="4Row" class="user-inp col-md-10 block-inp">
+        <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-1 hour pt-4">5:00PM</div>
+        <input id="5Row" class="user-inp col-md-10 block-inp">
+        <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
