--- a/index.html
+++ b/index.html
@@ -30,48 +30,48 @@
     </header>
     <div class="container">
       <div class="row">
-        <div class="col-md-1 hour">9:00AM</div>
-        <input id="9Row" class="user-inp col-md-10 block-inp">
+        <div class="col-md-1 hour">9:00 AM</div>
+        <input id="row-9" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
         <div class="col-md-1 hour">10:00AM</div>
-        <input id="10Row" class="user-inp col-md-10 block-inp">
+        <input id="row-10" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
         <div class="col-md-1 hour">11:00AM</div>
-        <input id="11Row" class="user-inp col-md-10 block-inp">
+        <input id="row-11" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
         <div class="col-md-1 hour">12:00PM</div>
-        <input id="12Row" class="user-inp col-md-10 block-inp">
+        <input id="row-12" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
         <div class="col-md-1 hour">1:00PM</div>
-        <input id="1Row" class="user-inp col-md-10 block-inp">
+        <input id="row-1" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
         <div class="col-md-1 hour">2:00PM</div>
-        <input id="2Row" class="user-inp col-md-10 block-inp">
+        <input id="row-2" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
         <div class="col-md-1 hour">3:00PM</div>
-        <input id="3Row" class="user-inp col-md-10 block-inp">
+        <input id="row-3" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
         <div class="col-md-1 hour">4:00PM</div>
-        <input id="4Row" class="user-inp col-md-10 block-inp">
+        <input id="row-4" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
-        <div class="col-md-1 hour pt-4">5:00PM</div>
-        <input id="5Row" class="user-inp col-md-10 block-inp">
+        <div class="col-md-1 hour">5:00PM</div>
+        <input id="row-5" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" data-hour=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
     </div>
