--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
       </div>
       <div class="row">
         <div class="col-md-1 hour">10:00AM</div>
-        <input id="row-10" class="col-md-10">
+        <input id="row-10" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" data-hr=10><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
         <div class="col-md-1 hour">11:00AM</div>
-        <input id="row-11" class="col-md-10">
+        <input id="row-11" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" save-hr=11><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
         <div class="col-md-1 hour">12:00PM</div>
-        <input id="row-12" class="col-md-10">
+        <input id="row-12" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" save-hr=12><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
@@ -56,22 +56,22 @@
       </div>
       <div class="row">
         <div class="col-md-1 hour">2:00PM</div>
-        <input id="row-2" class="col-md-10">
+        <input id="row-2" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" save-hr=2><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
         <div class="col-md-1 hour">3:00PM</div>
-        <input id="row-3" class="col-md-10">
+        <input id="row-3" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" save-hr=3><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
         <div class="col-md-1 hour">4:00PM</div>
-        <input id="row-4" class="col-md-10">
+        <input id="row-4" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" save-hr=4><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
       <div class="row">
         <div class="col-md-1 hour">5:00PM</div>
-        <input id="row-5" class="col-md-10">
+        <input id="row-5" class="user-inp col-md-10 block-inp">
         <div class="col-md-1 saveBtn" save-hr=5><img class="save-icon" src="./assets/image/event-24px.svg" alt="save"></div>
       </div>
     </div>
